# mandel_tut_rust

./: .gitignore  Cargo.toml  README.md  main.rs  shell.nix  vecmain.rs  vecmain2.rs
