[package]
name = "mandel_tut_rust"
version = "0.1.0"
authors = ["g_martins"]
edition = "2018"

[dependencies]
cgmath = "^0.17.0"
image = "^0.22.0"
num-complex = "^0.1.12"
num = "^0.1.12"

[[bin]]
name = "mandel_tut_rust"
path = "main.rs"

[[bin]]
name = "mandel_tut_rust_vec"
path = "vecmain.rs"

[[bin]]
name = "mandel_tut_rust_vec2"
path = "vecmain2.rs"
